--- a/src/pages/meal-detail-and-order/meal-detail-and-order.html
+++ b/src/pages/meal-detail-and-order/meal-detail-and-order.html
@@ -9,7 +9,8 @@
 </ion-header>
 <ion-content id="page7" no-padding>
 
-  <div style="height: 50%; background-image: url('assets/img/ijiiCXLOQnWnQjQ0moT4_22HC-meal-prep-fpr-2100-to-2400-calories.jpg');background-size: cover; background-position: center;">
+  <div style="height: 50%; background-size: cover; background-position: center;" [ngStyle]="{ 'background-image': 'url(' + imageURL + ')'}">
+
 
   </div>
 <!--   <img src="assets/img/ijiiCXLOQnWnQjQ0moT4_22HC-meal-prep-fpr-2100-to-2400-calories.jpg" style="display:block;width:100%;height:auto;margin-left:auto;margin-right:auto;" /> -->
