--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -5,9 +5,17 @@
 
   </form> -->
 
-  <img src="assets/img/mas.png" style="display:block;width:100%;height:auto;margin-left:auto;margin-right:auto;  zoom: 0.5;" />
+  <img src="assets/img/mas.png" style="display:block;width:100%;height:auto;margin-left:auto;margin-right:auto; scale: 2.0;" />
 </ion-content>
 <ion-footer >
+  <h1 id="sampleComponent-heading1"  style="color:#FFD700; text-align: center; font-size: 2em;">
+    Welcome to Golden Lounge
+  </h1>
+  <br>
+  <br>
+  <br>
+  <div class="spacer" style="height:20%;" id="sampleComponent-spacer3"></div>
+
   <div style="padding: 10px;">
     <ion-list id="login-list2">
       <ion-item id="login-input1" style="background-color: rgba(255, 255, 255, .8)">
@@ -15,7 +23,7 @@
         <ion-input type="email" placeholder="Enter Flight Booking Number" ></ion-input>
       </ion-item>
     </ion-list>
-    <button id="login-button1" ion-button color="blue_opacity" block on-click="goToHome()">
+    <button large id="login-button1" ion-button color="blue_opacity" block on-click="goToHome()">
       Done
     </button>
     <div class="spacer" style="height:40px;" id="login-spacer1"></div>
