--- a/src/pages/facility-detail-and-order/facility-detail-and-order.html
+++ b/src/pages/facility-detail-and-order/facility-detail-and-order.html
@@ -1,24 +1,31 @@
-<ion-header>
-  <ion-navbar>
+<ion-header no-border style=" background-image: linear-gradient(90deg, #ffffff,rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)">
+  <ion-navbar transparent >
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      Facility Detail and Order
+
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding id="page8">
-  <button id="facilityDetailAndOrder-button5" ion-button color="positive" block>
-    Order this go modal
-  </button>
-  <img src="assets/img/ijiiCXLOQnWnQjQ0moT4_22HC-meal-prep-fpr-2100-to-2400-calories.jpg" style="display:block;width:100%;height:auto;margin-left:auto;margin-right:auto;" />
-  <div id="facilityDetailAndOrder-markdown8" class="show-list-numbers-and-dots">
+<ion-content id="page7" no-padding>
+  <div style="height: 50%; background-size: cover; background-position: center;" [ngStyle]="{ 'background-image': 'url(' + imageURL + ')'}">
+  </div>
+  <div padding id="mealDetailAndOrder-markdown6" class="show-list-numbers-and-dots">
+      <h3 id="sampleComponent-heading1" style="color:#000000; text-align: center">
+    {{name}}
+  </h3>
     <p style="color:#000000;">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec laoreet, neque in interdum euismod, nulla nisl aliquam massa, id iaculis ligula eros non tellus. Praesent eleifend ex ut ligula convallis tempor. Curabitur fringilla quis neque ac suscipit.
-      Mauris eget ullamcorper nisl. Etiam pharetra bibendum elementum. Cras porta vehicula ornare. Phasellus aliquam molestie convallis. Proin sit amet cursus nunc. Pellentesque eget feugiat tortor. Nunc dignissim, magna vel condimentum finibus, leo ex
-      dapibus justo, a elementum erat sapien eu orci. Cras ut turpis eget orci venenatis porta sed et justo. Donec egestas odio vel ligula hendrerit interdum. Etiam pharetra tempor nibh, in tincidunt sapien porttitor et. Pellentesque consequat a arcu
-      quis aliquam. Nunc quis porttitor nunc, et hendrerit metus.
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non mattis neque. Pellentesque dignissim, mi id tristique fringilla, dui magna congue arcu, ac iaculis est enim quis urna. Vivamus rhoncus massa sit amet mi venenatis vulputate. Etiam tortor lacus, hendrerit vel ipsum id, pulvinar aliquet ante. Morbi fringilla tellus in ante euismod gravida. Ut placerat dui ac imperdiet bibendum. Maecenas lacus est, fringilla eu maximus ut, pellentesque sit amet metus. Donec volutpat bibendum enim sit amet pulvinar. Vestibulum eros diam, condimentum sed ipsum vitae, auctor dignissim nibh. Etiam dapibus tempus lacus, eu vulputate ipsum egestas vel. Vivamus aliquet aliquam erat non dictum. In a convallis magna. Donec pellentesque urna at nunc molestie, sit amet imperdiet magna ultrices. Vivamus luctus, mi non venenatis molestie, mi augue consectetur nisi, vel tristique augue ligula non purus. Nullam mattis felis vitae tortor tempus suscipit. Fusce eu maximus felis.
     </p>
   </div>
 </ion-content>
+
+<!-- <ion-footer >
+  <div style="padding: 10px;">
+    <button id="login-button1" ion-button color="blue_opacity" block on-click="openBasicModal()">
+      Order This
+    </button>
+    <div class="spacer" style="height:40px;" id="login-spacer1"></div>
+</div>
+</ion-footer> -->
