--- a/src/pages/flight/flight.html
+++ b/src/pages/flight/flight.html
@@ -7,9 +7,11 @@
 <ion-header>
 
   <ion-navbar>
-  	    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
+    <ion-buttons start>
+      <button ion-button on-click="goHome()">
+        Home
+      </button>
+    </ion-buttons>
     <ion-title>Flight</ion-title>
   </ion-navbar>
 
