--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -30,7 +30,7 @@
   <ion-card on-click="goFlight()" style="color: black; background-size: cover; background-position: center;" [ngStyle]="{ 'background-image': 'url(assets/img/home/flight.webp)'}">
     <!-- <img src="assets/img/meal/1.jpg" style="background-size: cover;"/> -->
     <div style="height: 100%; background-image: linear-gradient(0deg, #ffffff,rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)">
-    	<div padding class=" card-title" ''>Flight Status</div>
+    	<div padding class=" card-title">Flight Status</div>
     </div>
   </ion-card>
 
