--- a/src/pages/meal-offering/meal-offering.html
+++ b/src/pages/meal-offering/meal-offering.html
@@ -1,35 +1,24 @@
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
+    <ion-buttons start>
+      <button ion-button on-click="goHome()">
+        Home
+      </button>
+    </ion-buttons>
     <ion-title>
       Meal Offering
     </ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content id="page2">
-  <h3 padding-left id="mealOffering-heading2" style="color:#000000;">
-    Lunch Offering
-  </h3>
-    <ion-card *ngFor="let player of heroes" id="mealOffering-list5" style="background-color: #e5e6e8;">
+    <ion-card *ngFor="let mealtype of mealtype" id="mealOffering-list5" style="background-color: #e5e6e8;">
        <div style="height: 100%; background-image: linear-gradient(0deg, #ffffff,rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)">
-    
     </div>
-    <ion-item color="none" on-click="goToMealDetailAndOrder(player)" id="mealOffering-list-item15" style="background-color: #e5e6e8;">
-      <ion-thumbnail item-left>
-        <img src={{player.url}} />
-      </ion-thumbnail>
+     <ion-item color="none" on-click="goToMealDetailAndOrder(mealtype)" id="mealOffering-list-item15" style="background-color: #e5e6e8;"> 
       <h2>
-        {{player.name}}
-        <p>
-          <ion-badge item-end *ngIf="player.status==true" >Available</ion-badge>
-          <ion-badge item-end *ngIf="player.status==false" >Not Available</ion-badge>
-        </p>
+        {{mealtype.name_type}}
       </h2>
-      <p>
-        <ion-badge no-margin item-end>{{player.type}}</ion-badge>
-      </p>
+
     </ion-item>
   </ion-card>
 
