--- a/src/pages/our-facility/our-facility.html
+++ b/src/pages/our-facility/our-facility.html
@@ -1,8 +1,10 @@
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
+    <ion-buttons start>
+      <button ion-button on-click="goHome()">
+        Home
+      </button>
+    </ion-buttons>
     <ion-title>
       Our Facility
     </ion-title>
@@ -13,7 +15,7 @@
     Lunch Offering
   </h3>
     <ion-card *ngFor="let player of heroes" id="mealOffering-list5" style="background-color: #e5e6e8;">
-    <ion-item color="none" on-click="goToFacilityDetailAndOrder(player)" id="mealOffering-list-item15" style="background-color: #e5e6e8;">
+    <ion-item color="none" id="mealOffering-list-item15" style="background-color: #e5e6e8;">
       <ion-thumbnail item-left>
         <img src={{player.url}} />
       </ion-thumbnail>
