letak timer, ada error message connection, ada refresher

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,6 +12,10 @@
 
 <ion-content class="card-background-page">
 
+<div padding-left padding-top>
+  <h6 no-margin>Departure to XXX</h6>
+  <h2 no-margin>{{timer.displayTime}}</h2>
+</div>
 
   <ion-card on-click="goToMealOffering()" style="color: black; background-size: cover; background-position: center;" [ngStyle]="{ 'background-image': 'url(assets/img/home/meal.jpg)'}">
     <!-- <img src="assets/img/meal/1.jpg" style="background-size: cover;"/> -->
