--- a/src/pages/meal-detail-and-order/meal-detail-and-order.html
+++ b/src/pages/meal-detail-and-order/meal-detail-and-order.html
@@ -4,13 +4,20 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
+      {{mealtype}}
     </ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content id="page2">
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content
+      pullingIcon="arrow-dropdown"
+      pullingText="Pull to refresh"
+      refreshingSpinner="circles"
+      refreshingText="Refreshing..."></ion-refresher-content>
+  </ion-refresher>
 
   <h3 padding-left id="mealOffering-heading2" style="color:#000000;">
-    {{mealtype}}
   </h3>
     <ion-card *ngFor="let meal of meal" id="mealOffering-list5" style="background-color: #e5e6e8;">
        <div style="height: 100%; background-image: linear-gradient(0deg, #ffffff,rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)">
