--- a/src/pages/meal-offering/meal-offering.html
+++ b/src/pages/meal-offering/meal-offering.html
@@ -11,10 +11,17 @@
   </ion-navbar>
 </ion-header>
 <ion-content id="page2">
-    <ion-card *ngFor="let mealtype of mealtype" id="mealOffering-list5" style="background-color: #e5e6e8;">
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content
+      pullingIcon="arrow-dropdown"
+      pullingText="Pull to refresh"
+      refreshingSpinner="circles"
+      refreshingText="Refreshing..."></ion-refresher-content>
+  </ion-refresher>
+  <ion-card *ngFor="let mealtype of mealtype" id="mealOffering-list5" style="background-color: #e5e6e8;">
        <div style="height: 100%; background-image: linear-gradient(0deg, #ffffff,rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)">
     </div>
-     <ion-item color="none" on-click="goToMealDetailAndOrder(mealtype)" id="mealOffering-list-item15" style="background-color: #e5e6e8;"> 
+    <ion-item color="none" on-click="goToMealDetailAndOrder(mealtype)" id="mealOffering-list-item15" style="background-color: #e5e6e8;"> 
       <h2>
         {{mealtype.name_type}}
       </h2>
