--- a/src/pages/facility-detail-and-order/facility-detail-and-order.html
+++ b/src/pages/facility-detail-and-order/facility-detail-and-order.html
@@ -1,31 +1,27 @@
-<ion-header no-border style=" background-image: linear-gradient(90deg, #ffffff,rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)">
-  <ion-navbar transparent >
+<!-- <ion-header no-border style=" background-image: linear-gradient(90deg, #ffffff,rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)"> -->
+<ion-header no-border>
+  <ion-navbar transparent>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content id="page7" no-padding>
-  <div style="height: 50%; background-size: cover; background-position: center;" [ngStyle]="{ 'background-image': 'url(' + imageURL + ')'}">
+<ion-content no-padding>
+
+  <ion-slides  #slider pager (ionSlideDidChange)="onSlideChanged()" dir="rtl" style="height: 45%;">
+    <ion-slide *ngFor="let slide of slides"
+               [ngStyle]="{'background' : 'url(' + slide.imageUrl + ')'}">
+    </ion-slide>
+  </ion-slides>
+  <div style="position: absolute;
+      width: 100%;
+      text-align: center;">
+        <h3 id="profile-name">{{name}}</h3>
+        <button ion-button small color="purple" >Alert Me</button>
   </div>
-  <div padding id="mealDetailAndOrder-markdown6" class="show-list-numbers-and-dots">
-      <h3 id="sampleComponent-heading1" style="color:#000000; text-align: center">
-    {{name}}
-  </h3>
-    <p style="color:#000000;">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non mattis neque. Pellentesque dignissim, mi id tristique fringilla, dui magna congue arcu, ac iaculis est enim quis urna. Vivamus rhoncus massa sit amet mi venenatis vulputate. Etiam tortor lacus, hendrerit vel ipsum id, pulvinar aliquet ante. Morbi fringilla tellus in ante euismod gravida. Ut placerat dui ac imperdiet bibendum. Maecenas lacus est, fringilla eu maximus ut, pellentesque sit amet metus. Donec volutpat bibendum enim sit amet pulvinar. Vestibulum eros diam, condimentum sed ipsum vitae, auctor dignissim nibh. Etiam dapibus tempus lacus, eu vulputate ipsum egestas vel. Vivamus aliquet aliquam erat non dictum. In a convallis magna. Donec pellentesque urna at nunc molestie, sit amet imperdiet magna ultrices. Vivamus luctus, mi non venenatis molestie, mi augue consectetur nisi, vel tristique augue ligula non purus. Nullam mattis felis vitae tortor tempus suscipit. Fusce eu maximus felis.
-    </p>
-  </div>
+  
+
 </ion-content>
 
-<!-- <ion-footer >
-  <div style="padding: 10px;">
-    <button id="login-button1" ion-button color="blue_opacity" block on-click="openBasicModal()">
-      Order This
-    </button>
-    <div class="spacer" style="height:40px;" id="login-spacer1"></div>
-</div>
-</ion-footer> -->
