--- a/src/pages/our-facility/our-facility.html
+++ b/src/pages/our-facility/our-facility.html
@@ -21,9 +21,9 @@
   <ion-card *ngFor="let facility of facility" id="mealOffering-list5" style="background-color: #e5e6e8;">
        <div style="height: 100%; background-image: linear-gradient(0deg, #ffffff,rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)">
     </div>
-    <ion-item color="none" on-click="goToMealDetailAndOrder(facility)" id="mealOffering-list-item15" style="background-color: #e5e6e8;"> 
+    <ion-item color="none" on-click="goToFacilityDetailAndOrder(facility)" id="mealOffering-list-item15" style="background-color: #e5e6e8;"> 
       <h2>
-        {{facility.name}}
+        {{facility.facility_type}}
       </h2>
 
     </ion-item>
