--- a/src/pages/meal-offering/meal-offering.html
+++ b/src/pages/meal-offering/meal-offering.html
@@ -23,7 +23,7 @@
     </div>
     <ion-item color="none" on-click="goToMealDetailAndOrder(mealtype)" id="mealOffering-list-item15" style="background-color: #e5e6e8;"> 
       <h2>
-        {{mealtype.name_type}}
+        {{mealtype.name}}
       </h2>
 
     </ion-item>
