--- a/src/pages/facility-detail-and-order/facility-detail-and-order.html
+++ b/src/pages/facility-detail-and-order/facility-detail-and-order.html
@@ -19,7 +19,7 @@
       width: 100%;
       text-align: center;">
         <h3 id="profile-name">{{name}}</h3>
-        <button ion-button small color="purple" >Alert Me</button>
+        <!--<button ion-button small color="purple" >Alert Me</button>-->
   </div>
   
 
