--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,9 +1,9 @@
 <ion-content padding id="page4" style="background-image: url('assets/img/back.jpg');background-size: cover;">
-<!--   <form id="login-form1">
+  <form id="login-form1">
     <div class="spacer" style="width:300px;height:119px;" id="login-spacer2"></div>
 
 
-  </form> -->
+  </form> 
 
   <img src="assets/img/mas.png" style="display:block;width:100%;height:auto;margin-left:auto;margin-right:auto; scale: 2.0;" />
 </ion-content>
@@ -15,15 +15,18 @@
   <br>
   <br>
   <div class="spacer" style="height:20%;" id="sampleComponent-spacer3"></div>
+  
 
   <div style="padding: 10px;">
     <ion-list id="login-list2">
       <ion-item id="login-input1" style="background-color: rgba(255, 255, 255, .8)">
         <ion-label></ion-label>
-        <ion-input type="email" placeholder="Enter Flight Booking Number" ></ion-input>
+        <ion-input type=""  [(ngModel)]="flightnumber"  placeholder="Enter Flight Booking Number" ></ion-input>
       </ion-item>
+
+  
     </ion-list>
-    <button large id="login-button1" ion-button color="blue_opacity" block on-click="goToHome()">
+    <button large id="login-button1" ion-button color="blue_opacity" block on-click="login()">
       Done
     </button>
     <div class="spacer" style="height:40px;" id="login-spacer1"></div>
