--- a/src/pages/meal-detail-and-order/meal-detail-and-order.html
+++ b/src/pages/meal-detail-and-order/meal-detail-and-order.html
@@ -23,6 +23,9 @@
        <div style="height: 100%; background-image: linear-gradient(0deg, #ffffff,rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)">
     </div>
      <ion-item color="none" id="mealOffering-list-item15" style="background-color: #e5e6e8;"> 
+      <ion-thumbnail item-start>
+        <img src="{{meal.imageurl}}"> 
+      </ion-thumbnail>
       <h2>
         {{meal.name}}
       </h2>
