passenger connect db

--- a/src/pages/flight/flight.html
+++ b/src/pages/flight/flight.html
@@ -28,7 +28,7 @@
     Flight Number
   </h3>
     <p style="font-size:  2em;">
-  {{flightdata.id}}
+  {{flightdata.flight_code}}
       </p>
     </div>
 
