user api provider

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,16 +1,18 @@
-<ion-content padding id="page4" style="background-image: url('assets/img/back.jpg');background-size: cover;">
-  <form id="login-form1">
+<!-- <ion-content padding id="page4" style="background-image: url('assets/img/back.jpg');background-size: cover;"> -->
+  <ion-content padding >
+<!--   <form id="login-form1">
     <div class="spacer" style="width:300px;height:119px;" id="login-spacer2"></div>
 
 
-  </form> 
+  </form>  -->
 
   <img src="assets/img/mas.png" style="display:block;width:100%;height:auto;margin-left:auto;margin-right:auto; scale: 2.0;" />
-</ion-content>
-<ion-footer >
-  <h1 id="sampleComponent-heading1"  style="color:#FFD700; text-align: center; font-size: 2em;">
+    <h1 id="sampleComponent-heading1"  style="color:#FFD700; text-align: center; font-size: 2em;">
     Welcome to Golden Lounge
   </h1>
+</ion-content>
+<ion-footer padding no-shadow no-lines no-borde>
+
   <br>
   <br>
   <br>
@@ -26,8 +28,8 @@
 
   
     </ion-list>
-    <button large id="login-button1" ion-button color="blue_opacity" block on-click="login()">
-      Done
+    <button id="login-button1" ion-button color="blue_opacity" block on-click="login()">
+      Login
     </button>
     <div class="spacer" style="height:40px;" id="login-spacer1"></div>
 </div>
