--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -11,7 +11,7 @@
     Welcome to Golden Lounge
   </h1>
 </ion-content>
-<ion-footer padding no-shadow no-lines no-borde>
+<ion-footer padding no-shadow no-lines no-border>
 
   <br>
   <br>
