--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,7 +16,8 @@
 
 <div padding-left padding-top>
   <h6 no-margin>Time Before Departure to {{flightdata.to}}</h6>
-  <h2 no-margin>{{timer.displayTime}}</h2>
+  <h2 no-margin *ngIf="displaytime">{{timer.displayTime}}</h2>
+  <h2 no-margin *ngIf="!displaytime">Fetching...</h2>
 
 
 </div>
